# clean-sweep

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  tui.py
clean_sweep/: __init__.py  cli.py
clean_sweep/cleaners/: apps.py  custom.py  spec.py
clean_sweep_tui/: __init__.py  cli.py  tui.py
clean_sweep_tui/cleaners/: _common.py  custom.py  dev.py  presets.py  registry.py  spec.py
clean_sweep_tui/presets/: claude.json  codex.json  siyuan.json  wechat-devtools.json
cleaners/: _common.py  custom.py  dev.py  logs.py  registry.py  system.py  user.py
memory/: MEMORY.md  no-claude-commit-attribution.md
