[project]
name = "clean-sweep-tui"
version = "0.1.2"
description = "一键清空各类开发缓存及部分用户目录、应用配置的 Linux 命令行小工具"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "Talyra42" }]
keywords = ["cleanup", "cache", "cli", "tui", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=15.0.0",
    "textual>=8.2.7",
]

[project.urls]
Homepage = "https://github.com/LumiDesk/clean-sweep-tui"
Repository = "https://github.com/LumiDesk/clean-sweep-tui"

[project.scripts]
clean-sweep-tui = "clean_sweep_tui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clean_sweep_tui"]
